--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Parisienne&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 :root {
-    --primary-color: #f948b2;
-    --secondary-color: #0b0223;
-    --tartiary-color: #534c64;
+    --primary-color: rgb(225,225,225);
+    --secondary-color: rgba(225,225,225,0.5);
+    --tartiary-color: rgb(230, 83, 60);
 }
 html {
     font-size: 60.5%;
@@ -17,8 +19,9 @@ body {
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     text-rendering: optimizeLegibility;
-    line-height: 1.3;
+    line-height: 1.1;
     font-size: 1.6rem;
+    background: #000;
 }
 ul li {
     list-style-type: none;
@@ -28,7 +31,7 @@ ul li {
     outline: 0;
 }
 .row {
-    max-width: 114rem;
+    max-width: 80%;
     margin: 0 auto;
 }
 section {
@@ -47,3 +50,161 @@ section {
     padding: 1.5rem 3rem;
 
 }
+/* header section */
+header .bg-header {
+    width: 100%;
+    height: 90vh;
+    background: linear-gradient(180deg, rgb(17,17,17), rgba(119,119,119, 0));
+}
+header .nav-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 0;
+}
+.nav-logo h2 {
+    width: 13.4rem;
+    height: 4.3rem;
+    color: var(--tartiary-color);
+    font-family: Inter;
+    font-size: 3.6rem;
+    font-weight: 800;
+}
+.nav-menu ul {
+    display: flex;
+    gap: 4.7rem;
+}
+.nav-menu ul li {
+    align-items: center;
+}
+.nav-menu ul li a {
+    text-decoration: none;
+    color: var(--primary-color);
+    font-family: Inter;
+    font-size: 1.8rem;
+    font-weight: 400;
+}
+.nav-menu .active {
+    background-color: var(--tartiary-color);
+    padding: .8rem 2rem;
+    border-radius: 4.3rem;
+}
+/* banner section */
+.banner-section {
+    display: flex;
+    justify-content: flex-start;
+    gap: 3rem;
+    width: 100%;
+    height: 100vh;
+}
+.banner-left {
+    padding-top: 6rem;
+
+}
+.banner-left h1 {
+    color: var(--primary-color);
+    font-family: Inter;
+    font-size: 4.8rem;
+    font-weight: 900;
+    text-align: left;
+    margin: 2.4rem 0;
+}
+.banner-left h1 span {
+    font-family: "Parisienne", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+.banner-left p {
+    color: var(--secondary-color);
+    font-family: Inter;
+    font-size: 1.6rem;
+    font-weight: 400;
+    line-height: 2.4rem;
+    text-align: left;
+    margin: 1.8rem 0;
+    margin-bottom: 3rem;
+}
+.banner-l-btn .banner-left-btn,
+.banner-l-btn .banner-right-btn {
+    color: var(--primary-color);
+    font-family: Inter;
+    background:  var(--tartiary-color);
+    font-size: 1.2rem;
+    font-weight: 600;
+    line-height: 2.2rem;
+    text-align: left;
+    padding: 1.2rem 3rem;
+    border-radius: 3.2rem;
+    border: none;
+}
+.banner-l-btn .banner-right-btn {
+    background: transparent;
+    border: 1px solid rgb(225,225,225);
+}
+.banner-right {
+    position: relative;
+}
+.banner-right-img img {
+    width: 34.9rem;
+    height: auto;
+    top: -6rem;
+    left: 23.7rem;
+    position: absolute;
+}
+.banner-right .banner-box-right,
+.banner-right .banner-box-left {
+    width: 17.3rem;
+    height: 9.3rem;
+    position: absolute;
+    left: 46.7rem;
+    top: 6rem;
+    border: .1rem solid rgba(225,255,255,0.1);
+    border-radius: 1.2rem;
+    backdrop-filter: blur(2rem);
+    background: rgba(225,225,225,0.1);
+    padding-left: 2.4rem;
+    padding-top: 1.6rem;
+    text-align: left;
+}
+.banner-right .banner-box-left {
+    top: 36rem;
+    left: 16rem;
+    border: 1px solid var(--secondary-color);
+    backdrop-filter: blur(2rem);
+    background: rgba(48,48,48,0.54);
+    padding-left: 2.4rem;
+    padding-top: 1.6rem;
+    text-align: left;
+}
+.banner-right .banner-box-right h2,
+.banner-right .banner-box-left h2 { 
+    color: var(--primary-color);
+    font-family: Inter;
+    font-size: 3.6rem;
+    font-weight: 900;
+    line-height: 4rem;
+    letter-spacing: .1rem;
+    text-align: left;
+}
+.banner-right .banner-box-right span,
+.banner-right .banner-box-left span {
+    color: rgba(225,225,225,0.6);
+    font-family: Inter;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 2rem;
+    letter-spacing: .1rem;
+}
+.banner-box-left {
+    display: flex;
+    gap: .8rem;
+}
+.banner-box-left .box-circle {
+    width: 2.8rem;
+    height: 2.8rem;
+    background: rgb(230, 83, 60);
+    border-radius: 50%;
+    margin-top: 2.2rem;
+}
+
+
