--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ ul li {
     margin: 0 auto;
 }
 section {
-    padding: 7rem 0;
+    padding: 4rem 0;
 }
 .btn,
 .btn:link,
@@ -69,6 +69,9 @@ header .nav-content {
     font-family: Inter;
     font-size: 3.6rem;
     font-weight: 800;
+}
+.nav-menu .menu-icon {
+    display: none;
 }
 .nav-menu ul {
     display: flex;
@@ -137,6 +140,9 @@ header .nav-content {
     border-radius: 3.2rem;
     border: none;
 }
+.banner-l-btn .banner-left-btn {
+    margin-right: 1rem;
+}
 .banner-l-btn .banner-right-btn {
     background: transparent;
     border: 1px solid rgb(225,225,225);
@@ -156,8 +162,6 @@ header .nav-content {
     width: 17.3rem;
     height: 9.3rem;
     position: absolute;
-    left: 46.7rem;
-    top: 6rem;
     border: .1rem solid rgba(225,255,255,0.1);
     border-radius: 1.2rem;
     backdrop-filter: blur(2rem);
@@ -166,7 +170,13 @@ header .nav-content {
     padding-top: 1.6rem;
     text-align: left;
 }
+.banner-right .banner-box-right{
+    position: absolute;
+    left: 46.7rem;
+    top: 6rem;
+}
 .banner-right .banner-box-left {
+    position: absolute;
     top: 36rem;
     left: 16rem;
     border: 1px solid var(--secondary-color);
