--- a/responsive.css
+++ b/responsive.css
@@ -16,10 +16,13 @@
     }
     /* banner section */
     .banner-section {
-        display: block;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
     }
     .banner-left {
         padding-top: 0rem;
+        width: 100%;
     }
     .banner-left h1 {
         font-size: 3.6rem;
@@ -34,40 +37,45 @@
     }
     .banner-l-btn .banner-left-btn,
     .banner-l-btn .banner-right-btn {
-        font-size: .9rem;
+        font-size: .8rem;
         font-weight: 400;
         line-height: 1.2rem;
     }
     .banner-right-img img {
-        width: 34.9rem;
-        height: auto;
+        width: 16.9rem;
+        height: 12.0rem;
         top: 0rem;
-        left: 0rem;
+        left: 5rem;
     }
     .banner-right {
         margin-top: 2rem;
+        width: 100%;
+        height: 58.8rem;
     }
     .banner-right-img img {
-        width: 25.9rem;
+        width: 18.9rem;
         height: auto;
-        top: 1rem;
-        left: 8rem;
+        top: -2rem;
+        left: 3rem;
         position: absolute;
     }
     .banner-right .banner-box-right{
         position: absolute;
-        left: 23.7rem;
-        top: 4rem;
+        left: 13.7rem;
+        top: -1rem;
     }
     .banner-right .banner-box-left{
-        padding-left: .8rem;
+        padding-left: 1.4rem;
+        padding-top: 1.6rem;
+        top: 13rem;
+        left: 0rem;
     }
     .banner-right .banner-box-right{
         padding-left: .8rem;
     }
     .banner-right .banner-box-right,
     .banner-right .banner-box-left {
-        width: 13.3rem;
+        width: 12.3rem;
         height: 6.5rem;
     }
     .banner-right .banner-box-right h2,
@@ -96,5 +104,18 @@
         padding-top: 1.6rem;
         text-align: left;
     }
-
+    /* habits change section */
+    main .habits-section {
+        padding: 20rem 0;
+        overflow: hidden;
+    }
+    .c-habits .c-habits-text h2 {
+        font-size: 2.4rem;
+    }
+    .c-habits-profile {
+        display: grid;
+        grid-template-columns: repeat(1fr);
+        gap: 1.4rem;
+        text-align: center;
+    }
 }
