--- a/responsive.css
+++ b/responsive.css
@@ -97,13 +97,6 @@
         height: 2rem;
         margin-top: .5rem;
     }
-    .banner-right .banner-box-left {
-        top: 18rem;
-        left: 3rem;
-        padding-left: 2.4rem;
-        padding-top: 1.6rem;
-        text-align: left;
-    }
     /* habits change section */
     main .habits-section {
         padding: 20rem 0;
@@ -117,5 +110,24 @@
         grid-template-columns: repeat(1fr);
         gap: 1.4rem;
         text-align: center;
+    }
+    main .habits-section {
+        padding-bottom: 2rem;
+    }
+    /* run extra responsive */
+    .run-extra-content {
+        flex-direction: column;
+        gap: 1rem;
+        margin-top: -2rem;
+    }
+    .run-extra-text h3 {
+        font-size: 2.8rem;
+    }
+    .run-extra-text p {
+        font-size: 1.2rem;
+    }
+    .run-extra-img img {
+        width: 18.6rem;
+        height: 16.2rem;
     }
 }
