--- a/style.css
+++ b/style.css
@@ -271,6 +271,52 @@ main .c-habits {
     letter-spacing: .03rem;
     text-align: center;
 }
+/* run extra section */
+.run-extra {
+    border-radius: 1.8rem;
+    background: rgb(34,34,34);
+    padding: 4rem 3rem;
+}
+.run-extra-content {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+}
+.run-extra-text h3 {
+    color: var(--primary-color);
+    font-family: Inter;
+    font-size: 3.8rem;
+    font-weight: 900;
+    line-height: 120%;
+    text-align: left;
+}
+.run-extra-text p {
+    color: var(--secondary-color);
+    font-family: Inter;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2.4rem;
+    letter-spacing: .03rem;
+    text-align: left;
+    margin: 2rem 0;
+}
+.run-extra-text button {
+    border-radius: 4.2rem;
+    background: var(--tartiary-color);
+    color: var(--primary-color);
+    font-family: Inter;
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 2.2rem;
+    letter-spacing: 0rem;
+    text-align: left;
+    padding: 0.8rem 1.8rem;
+    border: none;
+}
+.run-extra-img img {
+    width: 32.6rem;
+    height: 28.2rem;
+}
 
 
 
