--- a/style.css
+++ b/style.css
@@ -317,6 +317,170 @@ main .c-habits {
     width: 32.6rem;
     height: 28.2rem;
 }
+/* training and exercises */
+.train-exercise-text h3 {
+    color: var(--primary-color);
+    font-family: Inter;
+    font-size: 4.8rem;
+    font-weight: 900;
+    line-height: 120%;
+    text-align: left;
+    margin: 1rem 0;
+}
+.train-exercise-text p {
+    color: var(--secondary-color);
+    font-family: Inter;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2.4rem;
+    letter-spacing: 0.03rem;
+    text-align: left;
+    margin-bottom: 4rem;
+}
+.train-frist-row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.train-second-row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.train-frist-row img,
+.train-second-row img {
+    width: 100%;
+    height: 20rem;
+    object-fit: cover;
+    position: relative;
+    z-index: 0;
+}
+.train-frist-row {
+    position: relative;
+}
+.train-second-row {
+    position: relative;
+}
+.train-frist-row .train-exercise-transform span,
+.train-frist-row .train-exercise-achieve span,
+.train-frist-row .train-exercise-health span {
+    display: block;
+    margin-top: 1rem;
+    font-size: 1rem;
+    position: relative;
+    z-index: 2;
+}
+.train-exercise-transform::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(6, 255, 209, 0.712);
+    z-index: 1;
+}
+.train-exercise-achieve::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 0, 0, 0.315);
+    z-index: 1;
+}
+.train-exercise-health::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.507);
+    z-index: 1;
+}
+.train-frist-row .train-exercise-transform span {
+    position: absolute;
+    top: 16rem;
+    margin-left: 1.4rem;
+}
+.train-frist-row .train-exercise-achieve span {
+    position: absolute;
+    top: 2rem;
+    margin-left: .8rem;
+}
+.train-frist-row .train-exercise-health span {
+    position: absolute;
+    top: 16rem;
+    margin-left: 1.4rem;
+}
+.train-exercise-achieve {
+    grid-column: span 2;
+}
+.train-exercise-customize {
+    grid-column: span 2;
+}
+.train-second-row {
+    position: relative;
+}
+.train-exercise-customize span {
+    position: absolute;
+    top: -18rem;
+    left: 17rem;
+}
+
+.train-exercise-fitness span {
+    position: absolute;
+    top: -17rem;
+    left: 4rem;
+}
+.train-exercise-strength span,
+.train-exercise-customize span,
+.train-exercise-fitness span {
+    display: block;
+    margin-top: 1rem;
+    font-size: 1rem;
+    position: relative;
+    z-index: 2;
+}
+.train-exercise-strength span {
+    position: absolute;
+    top: 14rem;
+    left: 62rem;
+}
+
+
+.train-exercise-customize::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.322);
+        z-index: 1;
+}
+.train-exercise-strength::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(66, 255, 0, 0.35);
+        z-index: 1;
+}
+.train-exercise-health::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 71, 255, 0.307);
+        z-index: 1;
+}
+
+
 
 
 
