--- a/style.css
+++ b/style.css
@@ -585,8 +585,46 @@ input[type="text"] {
     background: var(--tartiary-color);
     border: none;
     padding: .8rem 1.6rem;
-}   
- 
+}
+.team-text h2 {
+    color: var(--primary-color);
+    font-family: Inter;
+    font-size: 3.8rem;
+    font-weight: 900;
+    line-height: 120%;
+    text-align: center;
+    margin-bottom: 1.2rem;
+}  
+.team-text p {
+    color: var(--secondary-color);
+    font-family: Inter;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2.4rem;
+    letter-spacing: .03rem;
+    text-align: center;
+    margin-bottom: 1.2rem;
+}
+.team-img-section {
+    background: rgba(225,225,225,0.1);
+    padding: 1rem;
+}
+.team-img-frist {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+}
+.team-img-second {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.5rem;
+}
+.team-img-frist img,
+.team-img-second img {
+    width: 100%;
+    height: 25rem;
+}
+
 
 
 
