--- a/style.css
+++ b/style.css
@@ -624,7 +624,73 @@ input[type="text"] {
     width: 100%;
     height: 25rem;
 }
-
+/* footer section */
+.footer-section { 
+    width: 144rem;
+    height: 32.9rem;
+    padding: 2rem 0;
+    background: rgba(225, 225, 225, 0.1);
+}
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+}
+.footer-content h2 {
+    color: var(--tartiary-color);
+    font-family: Inter;
+    font-size: 3.8rem;
+    font-weight: 900;
+    line-height: 120%;
+    text-align: start;
+    margin-bottom: 1.2rem;
+}
+.footer-content p {
+    color: var(--secondary-color);
+    font-family: Inter;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2.4rem;
+    letter-spacing: .03rem;
+    text-align: start;
+    margin-bottom: 2.2rem;
+}
+.footer-content h3 {
+    color: var(--primary-color);
+    font-family: Inter;
+    font-size: 2.8rem;
+    font-weight: 900;
+    line-height: 120%;
+    text-align: left;
+    margin-bottom: 2rem;
+}
+.footer-menu ul li {
+    list-style-type: none;
+    padding: 1rem 0;
+}
+.footer-menu ul li a {
+    text-decoration: none;
+    color: var(--secondary-color);
+    font-family: Inter;
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+.footer-reserve {
+    margin: 3rem 0;
+}
+.footer-reserve hr {
+    border: .2rem solid rgba(225,225,225,0.1);
+    margin: 2rem 0;
+}
+.footer-reserve p {
+    color: var(--secondary-color);
+    font-family: Inter;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 2.4rem;
+    letter-spacing: .03rem;
+    text-align: center;
+    margin-bottom: 2.2rem;
+}
 
 
 
